Term::ReadKey WIP